{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 14674,
  "lineage": "5f26ffdf-d033-b46c-9155-5a1f45b6b066",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a83c166f673df4de",
            "arn": "arn:aws:ec2:eu-north-1:610964304971:instance/i-073c38cffeb158fa6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-Infrastructure-Profile",
            "id": "i-073c38cffeb158fa6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0799ebaffa09e9c6f",
            "private_dns": "ip-10-0-4-59.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:610964304971:key/18d95a5d-82e4-425d-a8ed-b34964566fc5",
                "tags_all": {
                  "Environment": "Production",
                  "ManagedBy": "Terraform",
                  "Owner": "Liav",
                  "Project": "Devops-Quiz"
                },
                "throughput": 125,
                "volume_id": "vol-0e7cefad9d69084c1",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eaeacff5eb95b1f",
            "tags": {
              "Environment": "Development",
              "Name": "devops-quiz-jenkins",
              "Service": "Jenkins",
              "Subnet": "Private",
              "Type": "DevOps Infrastructure"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-jenkins",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "Service": "Jenkins",
              "Subnet": "Private",
              "Type": "DevOps Infrastructure"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078243dc7754bacd2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ec2_instance_role",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15",
            "arn_suffix": "app/devops-quiz-eks-alb/9314541b42770e15",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-quiz-eks-alb-549904150.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-quiz-eks-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06c8e81ce291ec63d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04286572934b29f17"
              },
              {
                "subnet_id": "subnet-06f00d26a06aeda30"
              }
            ],
            "subnets": [
              "subnet-04286572934b29f17",
              "subnet-06f00d26a06aeda30"
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-alb",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-alb",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "vpc_id": "vpc-08d3d5be591726bdb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/0bec1025b92229f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/0bec1025b92229f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_passthrough",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "certificate_arn": "arn:aws:acm:eu-north-1:610964304971:certificate/6cea771c-f3f2-41ee-996b-d15a51239f36",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.route53.aws_acm_certificate.main",
            "module.route53.aws_acm_certificate_validation.main",
            "module.route53.aws_route53_record.cert_validation",
            "module.route53.data.aws_route53_zone.public",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-argocd-tg/0243884bab636227",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/b00b1585618e27e3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "argocd.weatherlabs.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/b00b1585618e27e3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "priority": 200,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-argocd-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-argocd-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_lb_listener.https",
            "module.prod_cluster.module.alb.aws_lb_target_group.argocd",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.route53.aws_acm_certificate.main",
            "module.route53.aws_acm_certificate_validation.main",
            "module.route53.aws_route53_record.cert_validation",
            "module.route53.data.aws_route53_zone.public",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/5dc136342cbea65a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.weatherlabs.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/5dc136342cbea65a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "priority": 300,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-jenkins-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-jenkins-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_lb_listener.https",
            "module.prod_cluster.module.alb.aws_lb_target_group.jenkins",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.route53.aws_acm_certificate.main",
            "module.route53.aws_acm_certificate_validation.main",
            "module.route53.aws_route53_record.cert_validation",
            "module.route53.data.aws_route53_zone.public",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "quiz_backend_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-backend-tg/b25bc99905ec48bd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/17dcdfd0ff5bfad1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "quiz.weatherlabs.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/17dcdfd0ff5bfad1",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "priority": 110,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-backend-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-backend-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_lb_listener.https",
            "module.prod_cluster.module.alb.aws_lb_target_group.quiz_backend",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.route53.aws_acm_certificate.main",
            "module.route53.aws_acm_certificate_validation.main",
            "module.route53.aws_route53_record.cert_validation",
            "module.route53.data.aws_route53_zone.public",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "quiz_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-frontend-tg/d43c04e8f2b1e0f6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/26fb25b164cc30a9",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "quiz.weatherlabs.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener-rule/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84/26fb25b164cc30a9",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:listener/app/devops-quiz-eks-alb/9314541b42770e15/9f379300f7667e84",
            "priority": 120,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-frontend-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-frontend-rule",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.alb.aws_lb.main",
            "module.prod_cluster.module.alb.aws_lb_listener.https",
            "module.prod_cluster.module.alb.aws_lb_target_group.quiz_frontend",
            "module.prod_cluster.module.alb.aws_security_group.alb",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.route53.aws_acm_certificate.main",
            "module.route53.aws_acm_certificate_validation.main",
            "module.route53.aws_route53_record.cert_validation",
            "module.route53.data.aws_route53_zone.public",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-argocd-tg/0243884bab636227",
            "arn_suffix": "targetgroup/devops-quiz-eks-argocd-tg/0243884bab636227",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-argocd-tg/0243884bab636227",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-quiz-eks-argocd-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-argocd-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-argocd-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-default-tg/9be1b48c9c582866",
            "arn_suffix": "targetgroup/devops-quiz-eks-default-tg/9be1b48c9c582866",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-default-tg/9be1b48c9c582866",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-quiz-eks-default-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-default-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-default-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69",
            "arn_suffix": "targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-quiz-eks-jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-jenkins-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-jenkins-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "quiz_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-backend-tg/b25bc99905ec48bd",
            "arn_suffix": "targetgroup/devops-quiz-eks-quiz-backend-tg/b25bc99905ec48bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-backend-tg/b25bc99905ec48bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-quiz-eks-quiz-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-backend-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-backend-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "quiz_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-frontend-tg/d43c04e8f2b1e0f6",
            "arn_suffix": "targetgroup/devops-quiz-eks-quiz-frontend-tg/d43c04e8f2b1e0f6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-quiz-frontend-tg/d43c04e8f2b1e0f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:610964304971:loadbalancer/app/devops-quiz-eks-alb/9314541b42770e15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-quiz-eks-quiz-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-frontend-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-quiz-frontend-tg",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "elbv2.k8s.aws/cluster": "devops-quiz-eks"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69-2025111112005082860000001d",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:610964304971:targetgroup/devops-quiz-eks-jenkins-tg/45ff8a6ad96e7b69",
            "target_id": "i-073c38cffeb158fa6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ec2_instance_role",
            "module.jenkins.aws_instance.jenkins",
            "module.prod_cluster.module.alb.aws_lb_target_group.jenkins",
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-06c8e81ce291ec63d",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c8e81ce291ec63d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-quiz-eks-alb-2025111112004813780000001b",
            "name_prefix": "devops-quiz-eks-alb-",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-alb-sg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-alb-sg",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-0fd0237edb783849e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0fd0237edb783849e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Jenkins to communicate with EKS API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078243dc7754bacd2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019a30919e7723882"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-quiz-eks-cluster-2025111111464322210000000c",
            "name_prefix": "devops-quiz-eks-cluster-",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-cluster",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-cluster",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-019a30919e7723882",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019a30919e7723882",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Jenkins to access worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078243dc7754bacd2"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0237edb783849e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "devops-quiz-eks-node-2025111111464358850000000d",
            "name_prefix": "devops-quiz-eks-node-",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-node",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "kubernetes.io/cluster/devops-quiz-eks": "owned"
            },
            "tags_all": {
              "ClusterName": "devops-quiz-eks",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-eks-node",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "kubernetes.io/cluster/devops-quiz-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1059466658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd0237edb783849e",
            "security_group_rule_id": "sgr-0622300f3b93e19ea",
            "self": false,
            "source_security_group_id": "sg-019a30919e7723882",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3596452838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-0873db954a349f47f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-971026497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-013178be17b12a476",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3450327954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-06cfe28c971300753",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-82162692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-013e4889de6856a2c",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-398034981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-00dd3f553e166be71",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1931000814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-051edaa4abaf62739",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-141514341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-0266945ca61dd7810",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-156210140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-0145cc5f5666b35c9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1686292053",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-02201186519e0a198",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3235734970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-0e9d616e842ffe169",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_egress_to_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Jenkins outbound to EKS cluster",
            "from_port": 443,
            "id": "sgrule-2570552486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-078243dc7754bacd2",
            "security_group_rule_id": "sgr-0c72874d8d9b3cad5",
            "self": false,
            "source_security_group_id": "sg-0fd0237edb783849e",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_to_eks_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Jenkins to communicate with EKS API Server",
            "from_port": 443,
            "id": "sgrule-3448685362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd0237edb783849e",
            "security_group_rule_id": "sgr-0e4209e378e18363f",
            "self": false,
            "source_security_group_id": "sg-078243dc7754bacd2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_to_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Jenkins to access worker nodes",
            "from_port": 0,
            "id": "sgrule-3204458301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019a30919e7723882",
            "security_group_rule_id": "sgr-0d78e864ef59ef958",
            "self": false,
            "source_security_group_id": "sg-078243dc7754bacd2",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod_cluster.module.eks_cluster.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_access_policy_association.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.before_compute",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_addon.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_eks_identity_provider_config.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_policy.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.prod_cluster.module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_eks_addon_version.this",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.custom",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.data.tls_certificate.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.fargate_profile.data.aws_region.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_alias.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_grant.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.aws_kms_replica_key.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.eks_cluster.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.prod_cluster.module.eks_cluster.module.eks.time_sleep.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_autoscaling_schedule.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_eks_node_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.additional",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_iam_role_policy_attachment.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_launch_template.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.aws_placement_group.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_caller_identity.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ec2_instance_type_offerings.this",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.assume_role_policy",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_iam_policy_document.role",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_partition.current",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_ssm_parameter.ami",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.data.aws_subnets.placement_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.prod_cluster.module.node_groups.module.eks_managed_node_groups.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-078243dc7754bacd2",
            "description": "Security group for Jenkins controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078243dc7754bacd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI - External NLB Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jenkins Agent Communication",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jenkins Web UI - Internal",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "devops-jenkins-sg",
            "name_prefix": "",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "production",
              "Name": "Jenkins Security Group",
              "Service": "Jenkins"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Security Group",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "Service": "Jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-0e171b1cfe37858ac",
            "description": "Security group for Kubernetes cluster nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e171b1cfe37858ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kubernetes API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd client communication",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kube-controller-manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kube-scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "devops-kubernetes-sg",
            "name_prefix": "",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "production",
              "Name": "Kubernetes Security Group",
              "Service": "Kubernetes",
              "Type": "Cluster"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Kubernetes Security Group",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "Service": "Kubernetes",
              "Type": "Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubernetes_inter_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Inter-cluster communication - All Traffic",
            "from_port": 0,
            "id": "sgrule-357466771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e171b1cfe37858ac",
            "security_group_rule_id": "sgr-066c1e1362e69bdce",
            "self": false,
            "source_security_group_id": "sg-0e171b1cfe37858ac",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.kubernetes",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:internet-gateway/igw-091bf27c726e28982",
            "id": "igw-091bf27c726e28982",
            "owner_id": "610964304971",
            "tags": {
              "Environment": "production",
              "Name": "devops-quiz-igw-production",
              "Project": "devops-quiz"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-igw-production",
              "Owner": "Liav",
              "Project": "devops-quiz"
            },
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c409a74927dde802",
            "arn": "arn:aws:ec2:eu-north-1:610964304971:elastic-ip/eipalloc-0c409a74927dde802",
            "association_id": "eipassoc-040a84589e241bd04",
            "domain": "vpc",
            "id": "eipalloc-0c409a74927dde802",
            "instance": "i-07b47c5a5b731b820",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0777b806966a2d417",
            "private_dns": "ip-10-0-1-20.eu-north-1.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-16-170-100-251.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.100.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "NAT Instance EIP"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "NAT Instance EIP",
              "Owner": "Liav",
              "Project": "Devops-Quiz"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.nat_instance.aws_instance.nat",
            "module.vpc.module.nat_instance.aws_security_group.nat_instance",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087612fa932c8f075",
            "arn": "arn:aws:ec2:eu-north-1:610964304971:instance/i-07b47c5a5b731b820",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b47c5a5b731b820",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0777b806966a2d417",
            "private_dns": "ip-10-0-1-20.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-16-170-100-251.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.100.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:610964304971:key/18d95a5d-82e4-425d-a8ed-b34964566fc5",
                "tags_all": {
                  "Environment": "Production",
                  "ManagedBy": "Terraform",
                  "Owner": "Liav",
                  "Project": "Devops-Quiz"
                },
                "throughput": 125,
                "volume_id": "vol-00010912fa6567511",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06f00d26a06aeda30",
            "tags": {
              "Environment": "production",
              "Name": "NAT Instance",
              "Purpose": "Cost-optimized NAT Gateway replacement",
              "Service": "NAT",
              "Subnet": "Public",
              "Type": "Network Infrastructure"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "NAT Instance",
              "Owner": "Liav",
              "Project": "Devops-Quiz",
              "Purpose": "Cost-optimized NAT Gateway replacement",
              "Service": "NAT",
              "Subnet": "Public",
              "Type": "Network Infrastructure"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d0df4ea3b314183"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.nat_instance.aws_security_group.nat_instance",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:security-group/sg-06d0df4ea3b314183",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d0df4ea3b314183",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "All TCP from private subnets",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTP from private subnets",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTPS from private subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-quiz-nat-instance-production-20251111114638459900000009",
            "name_prefix": "devops-quiz-nat-instance-production-",
            "owner_id": "610964304971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-quiz-nat-security-group-production",
              "Project": "devops-quiz",
              "Type": "NAT"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-nat-security-group-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0f6b12963709d9f1080289494",
            "instance_id": "i-07b47c5a5b731b820",
            "instance_owner_id": "610964304971",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0777b806966a2d417",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0f6b12963709d9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.nat_instance.aws_instance.nat",
            "module.vpc.module.nat_instance.aws_security_group.nat_instance",
            "module.vpc.module.route_tables.aws_route_table.private",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:route-table/rtb-0c0f6b12963709d9f",
            "id": "rtb-0c0f6b12963709d9f",
            "owner_id": "610964304971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0777b806966a2d417",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-quiz-private-rt-production",
              "Project": "devops-quiz",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-private-rt-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:route-table/rtb-06bb7709598c7e450",
            "id": "rtb-06bb7709598c7e450",
            "owner_id": "610964304971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091bf27c726e28982",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-quiz-public-rt-production",
              "Project": "devops-quiz",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-public-rt-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b76d005f14d5f5d4",
            "route_table_id": "rtb-0c0f6b12963709d9f",
            "subnet_id": "subnet-09a4843c98a8dcb8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.route_tables.aws_route_table.private",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a09bef89cba10dae",
            "route_table_id": "rtb-0c0f6b12963709d9f",
            "subnet_id": "subnet-08eaeacff5eb95b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.route_tables.aws_route_table.private",
            "module.vpc.module.subnets.aws_subnet.private",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7b4620dc6533d5",
            "route_table_id": "rtb-06bb7709598c7e450",
            "subnet_id": "subnet-06f00d26a06aeda30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.module.route_tables.aws_route_table.public",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae8fff878b136140",
            "route_table_id": "rtb-06bb7709598c7e450",
            "subnet_id": "subnet-04286572934b29f17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.module.route_tables.aws_route_table.public",
            "module.vpc.module.subnets.aws_subnet.public",
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:subnet/subnet-09a4843c98a8dcb8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4843c98a8dcb8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610964304971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-north-1a",
              "Environment": "production",
              "Name": "devops-quiz-private-subnet-1-production",
              "Project": "devops-quiz",
              "Type": "Private",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AZ": "eu-north-1a",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-private-subnet-1-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Private",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:subnet/subnet-08eaeacff5eb95b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eaeacff5eb95b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610964304971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-north-1b",
              "Environment": "production",
              "Name": "devops-quiz-private-subnet-2-production",
              "Project": "devops-quiz",
              "Type": "Private",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AZ": "eu-north-1b",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-private-subnet-2-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Private",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:subnet/subnet-06f00d26a06aeda30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f00d26a06aeda30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610964304971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-north-1a",
              "Environment": "production",
              "Name": "devops-quiz-public-subnet-1-production",
              "Project": "devops-quiz",
              "Type": "Public",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "eu-north-1a",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-public-subnet-1-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Public",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:subnet/subnet-04286572934b29f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04286572934b29f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610964304971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-north-1b",
              "Environment": "production",
              "Name": "devops-quiz-public-subnet-2-production",
              "Project": "devops-quiz",
              "Type": "Public",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "eu-north-1b",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-public-subnet-2-production",
              "Owner": "Liav",
              "Project": "devops-quiz",
              "Type": "Public",
              "kubernetes.io/cluster/devops-quiz-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08d3d5be591726bdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc_core.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc_core",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:610964304971:vpc/vpc-08d3d5be591726bdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d18af6990283b767",
            "default_route_table_id": "rtb-09fc522e9b2242938",
            "default_security_group_id": "sg-05f899e66a585d4da",
            "dhcp_options_id": "dopt-04ac4a8882ba95604",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d3d5be591726bdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fc522e9b2242938",
            "owner_id": "610964304971",
            "tags": {
              "Environment": "production",
              "Name": "devops-quiz-vpc",
              "Project": "devops-quiz"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "devops-quiz-vpc",
              "Owner": "Liav",
              "Project": "devops-quiz"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}